# bilhao-linhas

./: .flake8  .gitignore  pyproject.toml  requirements.txt
bilhao_linhas/: create_measurements.py  etl_using_duckydb.py  etl_using_duckydb_writing_parquet.py  etl_using_python.py
